# freeimage_conan

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build.py  conanfile.py
patches/: freeimage-3.18.0-libjpeg9.patch  freeimage-3.18.0-raw.patch  freeimage-3.18.0-unbundling.patch
test_package/: conanfile.py  test_package.cpp
